BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/Segnala_NDG_Mancante__c.object-meta.xml
<CustomObject>
    <label>Segnala NDG Mancante</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NDG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segnala NDG Mancanti</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>