BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/ABI_Utente__c.field-meta.xml
<CustomField>
    <fullName>ABI_Utente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ABI Utente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>