BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Check_Richiesta__c.field-meta.xml
<CustomField>
    <fullName>Check_Richiesta__c</fullName>
    <formula>If ( NOT (Lavorato_del__c) &amp;&amp; DATEVALUE(CreatedDate)= TODAY() , TRUE , FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Richiesta</label>
    <type>Checkbox</type>
</CustomField>