BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Codice_Fiscale__c.field-meta.xml
<CustomField>
    <fullName>Codice_Fiscale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Fiscale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>