BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/CRM_ABI__c.field-meta.xml
<CustomField>
    <fullName>CRM_ABI__c</fullName>
    <formula>IF(ABI_Utente__c = &apos;05387&apos;, &apos;BPER (05387)&apos;, IF(ABI_Utente__c = &apos;01015&apos;, &apos;Banco di Sardegna (01015)&apos;, IF(ABI_Utente__c = &apos;03084&apos;, &apos;Banca Cesare Ponti (03084)&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABI</label>
    <type>Text</type>
</CustomField>