BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/CRM_Nome_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Nome_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Segnala NDG Mancanti</relationshipLabel>
    <relationshipName>Segnala_NDG_Mancanti</relationshipName>
    <type>Lookup</type>
</CustomField>