BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Data_di_Inserimento_del__c.field-meta.xml
<CustomField>
    <fullName>Data_di_Inserimento_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data di Inserimento</label>
    <type>Date</type>
</CustomField>