BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Denominazione__c.field-meta.xml
<CustomField>
    <fullName>Denominazione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Denominazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>