BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Filiale__c.field-meta.xml
<CustomField>
    <fullName>Filiale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filiale</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>