BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Lavorato_del__c.field-meta.xml
<CustomField>
    <fullName>Lavorato_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lavorato</label>
    <type>Checkbox</type>
</CustomField>