BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Partita_IVA__c.field-meta.xml
<CustomField>
    <fullName>Partita_IVA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partita IVA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>