BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Richiesto</fullName>
                <default>true</default>
                <label>Richiesto</label>
            </value>
            <value>
                <fullName>Inserito</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>