BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/recordTypes/Segnala_NDG_Mancante.recordType-meta.xml
<RecordType>
    <fullName>Segnala_NDG_Mancante</fullName>
    <active>true</active>
    <label>Segnala NDG Mancante</label>
</RecordType>