BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRM_Nome_Cliente__c</columns>
    <columns>CRM_ABI__c</columns>
    <columns>Filiale__c</columns>
    <columns>Denominazione__c</columns>
    <columns>Codice_Fiscale__c</columns>
    <columns>Partita_IVA__c</columns>
    <columns>Lavorato_del__c</columns>
    <columns>Stato__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>