BPER/DEVF/force-app/main/default/objects/Segnala_NDG_Mancante__c/listViews/Lista_Richieste.listView-meta.xml
<ListView>
    <fullName>Lista_Richieste</fullName>
    <columns>NAME</columns>
    <columns>CRM_Nome_Cliente__c</columns>
    <columns>CRM_ABI__c</columns>
    <columns>Filiale__c</columns>
    <columns>Denominazione__c</columns>
    <columns>Codice_Fiscale__c</columns>
    <columns>Partita_IVA__c</columns>
    <columns>Data_di_Inserimento_del__c</columns>
    <columns>Lavorato_del__c</columns>
    <columns>Stato__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Segnala_NDG_Mancante__c.Segnala_NDG_Mancante</value>
    </filters>
    <label>Lista Richieste</label>
    <sharedTo>
        <group>NEC_ADMIN</group>
    </sharedTo>
</ListView>